update pullrequests.yml and build.gradle