@@ -1,23 +1,26 @@
 package unit_tests.utils.logging;
 
 import org.mockito.Mockito;
+import org.mockito.MockedStatic;
 import org.testng.ITestClass;
 import org.testng.ITestContext;
 import org.testng.ITestNGMethod;
 import org.testng.ITestResult;
+import org.testng.ISuite;
 import org.testng.Reporter;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.Test;
-import org.testng.collections.Maps;
 import org.testng.internal.ResultMap;
 import org.testng.xml.XmlSuite;
 import utils.assertions.iAssert;
 import utils.logging.CustomArtifactsReporter;
 
+import java.lang.reflect.Proxy;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @Test(groups = {"unit"}, singleThreaded = true)
 public class CustomArtifactsReporterTest {
@@ -31,22 +34,13 @@ public class CustomArtifactsReporterTest {
     @Test
     public void generateReportShouldRenderMethodStatusScreenshotAndLog() throws Exception {
         ITestResult failedResult = mockResult("tests.SmokeTest", "openPageTest", ITestResult.FAILURE, "screenshots/failure.png");
-        Reporter.setCurrentTestResult(failedResult);
-        Reporter.log("2026-03-07 22:10:10.000: ERROR: Something bad happened</br>");
-        Reporter.log("<br><a href='screenshots/failure.png' target='_blank'> CLICK TO SEE SCREENSHOT </a></br>");
-        Reporter.setCurrentTestResult(null);
-
         ITestResult passedResult = mockResult("tests.SmokeTest", "searchTest", ITestResult.SUCCESS, null);
-        Reporter.setCurrentTestResult(passedResult);
-        Reporter.log("2026-03-07 22:10:20.000: INFO: Business step</br>");
-        Reporter.log("2026-03-07 22:10:20.100: DEBUG: Internal details</br>");
-        Reporter.setCurrentTestResult(null);
 
         ITestContext context = Mockito.mock(ITestContext.class);
         ResultMap failedMap = new ResultMap();
-        failedMap.addResult(failedResult, failedResult.getMethod());
+        failedMap.addResult(failedResult);
         ResultMap passedMap = new ResultMap();
-        passedMap.addResult(passedResult, passedResult.getMethod());
+        passedMap.addResult(passedResult);
         Mockito.when(context.getFailedTests()).thenReturn(failedMap);
         Mockito.when(context.getSkippedTests()).thenReturn(new ResultMap());
         Mockito.when(context.getPassedTests()).thenReturn(passedMap);
@@ -54,13 +48,20 @@ public class CustomArtifactsReporterTest {
         var suiteResult = Mockito.mock(org.testng.ISuiteResult.class);
         Mockito.when(suiteResult.getTestContext()).thenReturn(context);
 
-        var suite = Mockito.mock(org.testng.ISuite.class);
-        Mockito.when(suite.getName()).thenReturn("Demo Suite");
-        Mockito.when(suite.getResults()).thenReturn(Maps.newHashMap(Collections.singletonMap("Demo Test", suiteResult)));
-        Mockito.when(suite.getXmlSuite()).thenReturn(new XmlSuite());
+        ISuite suite = suite("Demo Suite", Map.of("Demo Test", suiteResult), new XmlSuite());
 
         Path outputDir = Files.createTempDirectory("custom-artifacts-report");
-        new CustomArtifactsReporter().generateReport(Collections.emptyList(), List.of(suite), outputDir.toString());
+        try (MockedStatic<Reporter> reporter = Mockito.mockStatic(Reporter.class)) {
+            reporter.when(() -> Reporter.getOutput(failedResult)).thenReturn(List.of(
+                    "2026-03-07 22:10:10.000: ERROR: Something bad happened</br>",
+                    "<br><a href='screenshots/failure.png' target='_blank'> CLICK TO SEE SCREENSHOT </a></br>"
+            ));
+            reporter.when(() -> Reporter.getOutput(passedResult)).thenReturn(List.of(
+                    "2026-03-07 22:10:20.000: INFO: Business step</br>",
+                    "2026-03-07 22:10:20.100: DEBUG: Internal details</br>"
+            ));
+            new CustomArtifactsReporter().generateReport(Collections.emptyList(), List.of(suite), outputDir.toString());
+        }
 
         Path reportFile = outputDir.resolve("custom-artifacts.html");
         iAssert.isTrue(Files.exists(reportFile), "custom-artifacts.html should be generated");
@@ -89,5 +90,26 @@ public class CustomArtifactsReporterTest {
         Mockito.when(testMethod.getMethodName()).thenReturn(methodName);
         Mockito.when(testClass.getName()).thenReturn(className);
         return result;
+    }
+
+    private ISuite suite(String name, Map<String, org.testng.ISuiteResult> results, XmlSuite xmlSuite) {
+        return (ISuite) Proxy.newProxyInstance(
+                ISuite.class.getClassLoader(),
+                new Class<?>[]{ISuite.class},
+                (proxy, method, args) -> switch (method.getName()) {
+                    case "getName" -> name;
+                    case "getResults" -> results;
+                    case "getXmlSuite" -> xmlSuite;
+                    case "getAttribute" -> null;
+                    case "getAttributeNames" -> Collections.emptySet();
+                    case "removeAttribute", "setAttribute", "run", "addListener", "setParentInjector" -> null;
+                    case "getMethodsByGroups" -> Collections.emptyMap();
+                    case "getAllInvokedMethods", "getExcludedMethods", "getAllMethods" -> Collections.emptyList();
+                    case "equals" -> proxy == args[0];
+                    case "hashCode" -> System.identityHashCode(proxy);
+                    case "toString" -> "ISuite[" + name + "]";
+                    default -> null;
+                }
+        );
     }
 }
